--- a/barras.html
+++ b/barras.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,8 +13,8 @@
 
 <script>
   var datos = [
-  {"candidato":"trump","seguidores":14607000},
-  {"candidato":"clinton","seguidores":10946000}
+  {"candidato":"trump","seguidores":14607000, "color":"#cc3d3d"},
+  {"candidato":"clinton","seguidores":10946000,"color":"#1a80c4"}
 ];
 
 /**
@@ -31,11 +33,24 @@ var svg = d3.select("body")
  .attr("width",200)
   .attr("height",200);
 
-svg.selectAll('rect').data(datos).enter().append('rect')
-   .attr("width", function(d,i) {return ancho(d.seguidores)   }  )
+var losR = svg.selectAll('rect').data(datos).enter().append('rect')
+   .attr("width", 0 )
    .attr("height",90)
+   .attr("fill", "white" )
    .attr("y", function(d,i) {return i*100}  );
 
+losR.transition()
+//  .duration(1000)
+    .attr("fill", function(d,i) { return d.color; } )
+    .attr("width", function(d,i) {return ancho(d.seguidores) });  
+  
+svg.selectAll('text').data(datos).enter().append('text')
+   .attr("fill","white")
+   .attr("font-size",40)
+   .attr("x",10)
+   .attr("y", function(d,i) {return 50+(i*100)}  )
+   .text( function(d,i) {return d.candidato   }  )
+  
 </script>  
   
 </body>
