--- a/barras.html
+++ b/barras.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -25,19 +23,20 @@ d3.select("body").selectAll("p")
     + d.seguidores.toLocaleString() + " seguidores."
   ;}  )
 **/
-
-var ancho = d3.scaleLinear().domain([0,14607000]).range([0,200]);
+var w = 400, h = 200;
+  
+var ancho = d3.scaleLinear().domain([0,14607000]).range([0,w]);
 
 var svg = d3.select("body")
  .append("svg")
- .attr("width",200)
-  .attr("height",200);
+ .attr("width",w)
+  .attr("height",h);
 
 var losR = svg.selectAll('rect').data(datos).enter().append('rect')
    .attr("width", 0 )
    .attr("height",90)
    .attr("fill", "white" )
-   .attr("y", function(d,i) {return i*100}  );
+   .attr("y", function(d,i) {return i*(h/2)}  );
 
 losR.transition()
 //  .duration(1000)
@@ -47,8 +46,9 @@ losR.transition()
 svg.selectAll('text').data(datos).enter().append('text')
    .attr("fill","white")
    .attr("font-size",40)
-   .attr("x",10)
-   .attr("y", function(d,i) {return 50+(i*100)}  )
+   .attr("text-anchor", "end")
+   .attr("x", function(d,i) {return ancho(d.seguidores)-10 })
+   .attr("y", function(d,i) {return (h/4)+(i*(h/2))}  )
    .text( function(d,i) {return d.candidato   }  )
   
 </script>  
